--- a/public/footer.html
+++ b/public/footer.html
@@ -1,3 +1,4 @@
+<!--Estilos del footer-->
 <style>
 .footer {
  position:relative;
@@ -14,7 +15,7 @@
   justify-content: center;
 }
 </style>
-
+<!--Elementos que tiene el footer-->
 <div class="footer">
   <p>PayaSoft©</p>
 </div>
