--- a/public/perfil.html
+++ b/public/perfil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Estilos de la pagina-->
   <style>
     .container {
       height: 200px;
@@ -17,15 +18,16 @@
       transform: translate(-50%, -50%);
     }
 </style>
-
-
+<!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Estilos de la pagina-->
     <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
+    <link rel="stylesheet" href="../styles/style-navbar.css">
+    <!-- Script para la carga del navbar-->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <link rel="stylesheet" href="../styles/style-navbar.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,15 +38,7 @@
 </head>
 <body>
     <header>
-       <!--  <nav class="navBar">
-          <h1>MasterTis</h1>
-             <ul>
-              <a class="itemNav" href="../index.html">volver a la pagina principal</a>
-              <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-             </ul>
-          </nav>-->
-
-            <!--Navigation bar-->
+ <!--Navigation bar-->
 <div id="nav-placeholder">
 
 </div>
@@ -56,7 +50,7 @@ $(function(){
 </script>
 <!--end of Navigation bar-->
 
-<!--Navigation bar-->
+<!--sidebar docente-->
 <div id="sidebd-placeholder">
 
 </div>
@@ -66,44 +60,19 @@ $(function(){
   $("#sidebd-placeholder").load("sidebarDocente.html");
 });
 </script>
-<!--end of Navigation bar-->
+<!--fin sidebar docente-->
     </header>
     <main>
-        <!--<div class="sidebar">
-            <!-- <h2 class="sidebar-title">Navegación</h2> -->
-            <!--<ul class="sidebar-list">
-              <li>
-                <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
-                <a href="./perfil.html" class="sidebar-item">Perfil</a>
-              </li>
-              <li>
-                <img src="https://img.icons8.com/ios/100/000000/file-2.png"/>
-                <a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a>
-              </li>
-              <li>
-                <img src="https://img.icons8.com/ios/100/000000/task.png"/>
-                <a href="./tareas.html" class="sidebar-item">Tareas</a>
-              </li>
-              <li>
-                <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
-               <!-- <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
-                <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
-              </li>
-              <li>
-                <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
-                <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
-              </li>
-              <!-- <li><a href="#">unirse a un grupo empresa</a></li> -->
-           <!-- </ul>
-        </div>-->
+        <!--contenedor para estilos-->
         <div class="container">
           <div style="size= 20px"class="center">
+            <!--espacio para la carga de datos del usuario-->
         <div id="datos-perfil">
         </div>
       </div>
     </div>
     </main>    
-    
+    <!--carga de scripts-->
 <script src="../scripts/recuperarDatosPerfil.js"></script>
 </body>
 </html>
