--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -1,5 +1,13 @@
+ <!--Contenido del sidebar docente-->
  <head>
+   <!--meta para que sea compatible con todos los dispositivos-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--estilos del sidebar:
+color de letra
+dropdown
+color de contenidos del dropdown 
+cambios de color al hacer click
+cambios de color al hacer hover con el mouse-->
 <style ="min-height:10000px">
 .dropbtn {
   background-color: #07889b;
@@ -40,10 +48,12 @@
 </style>
 </head>
 <body>
-
+<!--inicio del dropdown-->
 <div class="dropdown">
+  <!--icono del boton-->
   <button class="dropbtn">≡</button>
   <div class="dropdown-content">
+    <!--contenido de los enlaces del sidebar-->
             <a href="./crearClase.html" class="sidebar-item">Crear una clase para el semestre actual</a>
             <a href="./formularioConvocatorias.html" class="sidebar-item">Subir/Editar invitacion publica</a>
             <a href="./formularioPliego.html" class="sidebar-item">Subir/Editar pliego especificaciones</a>
