--- a/public/cerrarSesion.html
+++ b/public/cerrarSesion.html
@@ -1,12 +1,15 @@
+<!--funcion del boton de cerrar sesion-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+<!--Carga de scripts-->
  <script src="../scripts/cerrarSesion.js"></script>  
 </body>
 </html>
