--- a/public/crearGrupoEmpresa.html
+++ b/public/crearGrupoEmpresa.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Estilos de la pagina -->
   <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
+  <link rel="stylesheet" href="../styles/style-navbar.css">
+  <!-- Script para la carga del navbar -->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-      <link rel="stylesheet" href="../styles/style-navbar.css">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +21,7 @@
 </head>
 <body>
     <header>
+      <!--Inicio del navbar -->
       <div id="nav-placeholder">
 
       </div>
@@ -27,10 +31,11 @@
       $("#nav-placeholder").load("navbar.html");
       });
       </script>
+      <!--Fin del navbar -->
     </header>
     <div class="flex-body"> 
       <div class="sidebar">
-        <!-- <h2 class="sidebar-title">Navegación</h2> -->
+        <!-- Inicio del side bar estudiante -->
         <ul class="sidebar-list">
           <li>
             <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
@@ -55,11 +60,12 @@
     
         </ul>
       </div>
- 
-
+ <!--Fin del sidebar estudiante -->
+<!-- Campo donde se carga el formulario para crear empresa o datos de la empresa ya creada-->
       <div id="espacio-empresa"> </div>
 
 </div> 
+<!-- Carga de scripts-->
 <script src="../scripts/llenarCampoMiEmpresa.js"></script>
 <script src="../scripts/verificarSesionEstudiante.js"></script>
 
