--- a/public/crearTarea.html
+++ b/public/crearTarea.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Estilos de la pagina -->
   <style>
     .GFG {
         background-color: #07889b;
@@ -27,28 +28,27 @@
       transform: translate(-50%, -50%);
     }
 </style>
-
-
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Estilos de la pagina-->
   <link rel="stylesheet" href="../styles/style-form.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
-  <!-- <link rel="stylesheet" href="../styles/style-makeTasks.css">
+  <link rel="stylesheet" href="../styles/style-navbar.css">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="stylesheet" href="../styles/style-navbar.css">
     <title>Document</title>
 
 
 </head>
 <body>
-    <header>
-          <!--Navigation bar-->
+<header>
+<!--Navigation bar-->
 <div id="nav-placeholder">
 
 </div>
@@ -60,7 +60,7 @@ $(function(){
 </script>
 <!--end of Navigation bar-->
 
-<!--Navigation bar-->
+<!--side bar docente-->
 <div id="sidebd-placeholder">
 
 </div>
@@ -70,30 +70,13 @@ $(function(){
   $("#sidebd-placeholder").load("sidebarDocente.html");
 });
 </script>
-<!--end of Navigation bar-->
+<!--fin de side bar docente-->
       </header>
-
-
-<!--<div class="flex-body">
-    <div class="sidebar">
-        <h1 class="sidebar-title">Navegación</h1>
-        <ul class="sidebar-list">
-          <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
-           <div class="subir-editar">
-             <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
-             <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
-             <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
-           </div>
-           <li><a href="./docenteCalificaGrupos.html" class="sidebar-item">calificar grupos</a></li> 
-           <li><a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">crear un Grupo-Empresa</a></li> 
-           <!--podra editar los grupos de su clase -->
-         <!--  <li><a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a></li> 
-          <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
-         </ul>
-      </div>-->
-      <div class="container">
-        <div class="center">
-   <div class="options">
+<!-- div con los estilos de la pagina -->
+  <div class="container">
+    <div class="center">
+    <div class="options">
+     <!-- Carga de botones para crear tareas-->
     <a  href="./crearTareaComun.html">
       <button class="GFG">Crear tarea común</button>
       </a>
@@ -104,6 +87,7 @@ $(function(){
 </div>
 </div>
 </div>
+<!-- Carga de scripts-->
 <!-- <script src="../scripts/verificarSesion.js"></script> -->
 <script src="../scripts/verificarSesionDocente.js"></script>
 
