--- a/public/crearTareaComun.html
+++ b/public/crearTareaComun.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Estilos de la pagina-->
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <link rel="stylesheet" href="../styles/style-crearTareaComun.css">
+    <link rel="stylesheet" href="../styles/style-navbar.css">  
+    <!-- Carga de scrpit del navbar-->  
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="../styles/style-navbar.css">
-
-    
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,45 +20,34 @@
 </head>
     <body>
         <header>
-            <<!--Navigation bar-->
-<div id="nav-placeholder">
+     <!--Navigation bar-->
+            <div id="nav-placeholder">
 
-</div>
-
-<script>
-$(function(){
-  $("#nav-placeholder").load("navbar.html");
-});
-</script>
-<!--end of Navigation bar-->
-
-<!--Navigation bar-->
-<div id="sidebd-placeholder">
-
-</div>
-
-<script>
-$(function(){
-  $("#sidebd-placeholder").load("sidebarDocente.html");
-});
-</script>
-<!--end of Navigation bar-->
-        </header>
-        <!--<div class="flex-body">
-        <div class="sidebar">
-            <h1 class="sidebar-title">Navegación</h1>
-            <ul class="sidebar-list">
-            <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
-            <div class="subir-editar">
-               <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
-               <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
-               <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
             </div>
-            <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
-            </ul>
-        </div>-->
+
+            <script>
+            $(function(){
+            $("#nav-placeholder").load("navbar.html");
+            });
+            </script>
+            <!--end of Navigation bar-->
+
+            <!--sidebar docente-->
+            <div id="sidebd-placeholder">
+
+            </div>
+
+            <script>
+            $(function(){
+            $("#sidebd-placeholder").load("sidebarDocente.html");
+            });
+            </script>
+            <!--fin del sidebar docente-->
+        </header>
+        <!-- div con los estilos del formulario-->
             <div class="div-formulario">
                 <h1>Formulario para Crear Tarea</h1>
+                <!-- inicio del formulario -->
                 <form id="formulario" class="formulario">  
                     <h2>Titulo de la Tarea</h2>
                     <input type ="text" name="titulo" id="titulo" placeholder="Ingrese el titulo">
