--- a/public/estudianteCreaApunte.html
+++ b/public/estudianteCreaApunte.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Estilos de la pagina-->
   <link rel="stylesheet" href="../styles/style-header.css">
   <link rel="stylesheet" href="../styles/style-form.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
@@ -16,6 +18,7 @@
 </head>
 <body>
     <header>
+      <!--Inicio navbar-->
       <nav class="navBar">
         <h1>APOYO A LA EMPRESA TIS</h1>
            <ul>
@@ -23,7 +26,9 @@
             <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
            </ul>
         </nav>
+        <!--fin navbar-->
     </header>
+    <!--inicio sidebar estudiante-->
     <div class="flex-body"> 
       <div class="sidebar">
         <!-- <h2 class="sidebar-title">Navegación</h2> -->
@@ -52,11 +57,12 @@
     
         </ul>
       </div>
- 
-
+ <!--fin sidebar alumno-->
+<!--espacio para la carga de datos del archivo js-->
       <div id="espacio-empresa"> </div>
 
 </div> 
+<!--carga de scripts-->
 <script src="../scripts/llenarCampoMiEmpresa.js"></script>
 <script src="../scripts/verificarSesionEstudiante.js"></script>
 
