--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Estilos de la pagina-->
     <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <link rel="stylesheet" href="../styles/style-navbar.css">
-
-    <!-- Google fonts -->
+    <!-- Script para la carga del navbar, sidebar, footer-->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -20,14 +21,7 @@
 </head>
 <body>  
     <header>
-        <!--<nav class="navBar">
-          <h1>MasterTis</h1>
-             <ul>
-              <a class="itemNav" href="../index.html">Pagina principal</a>
-              <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-             </ul>
-        </nav>-->
-
+       
         <!--Navigation bar-->
 <div id="nav-placeholder">
 
@@ -42,8 +36,8 @@ $(function(){
     </header>
 
     <main class="flex-body">
+      <!-- inicio sidebar alumno-->
       <div class="sidebar">
-        <!-- <h2 class="sidebar-title">Navegación</h2> -->
         <ul class="sidebar-list">
           <li>
             <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
@@ -66,13 +60,13 @@ $(function(){
           <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
           <a href="./estudianteRevisaApuntesClase.html" class="sidebar-item">Apuntes</a>
        </li>
-  
         </ul>
       </div>
-
+        <!--fin sidebar alumno -->
+      <!-- espacio para cargar la lista de convocatorias publicadas-->
       <div id="contenedor-tarjetas"></div>
     </main>
-
+  <!-- carga de scripts-->
   <script src="../scripts/recuperarConvocatorias.js"></script>
   <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
