--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Estilos de la pagina-->
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <link rel="stylesheet" href="../styles/style-navbar.css">
     <link rel="stylesheet" href="../styles/style-paginaprincipal.css">
@@ -13,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
     <title>TIS</title>
+    <!-- Script para la carga del navbar-->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
@@ -30,23 +33,21 @@ $(function(){
 </script>
 <!--end of Navigation bar-->
 </header> 
-
-  
-
-   <div id="side-bar"></div>
-
+<div id="side-bar"></div>
+<!--container para la seccion plan global-->
   <div class="container" >
     <h1>Plan Global</h1>
   </div><hr> 
-
+<!--preview del plan global-->
   <div class="container" >
   <img src="https://i.postimg.cc/MGMCLfnW/image-2021-11-18-195536.png">
   </div>
+  <!--enlace de descarga para el plan global-->
 <a href="https://drive.google.com/u/3/uc?id=18CE-1OlVa7RAV6D4rNudx5jizUrAWBwZ&export=download">
 Presiona para descargar el PDF</a>
 
 <div class="container" >
-
+<!--container para la seccion de informacion de docentes-->
     <h1>Docentes</h1>
   </div><hr> 
 
@@ -68,10 +69,10 @@ Presiona para descargar el PDF</a>
     <figcaption class="caption">Flores Villarroel Corina</figcaption>
 </figure>   <img src="" alt="" class="imagen-inicio">
 </div>
+<!--horarios de los docentes-->
   <div class="container" >
     <h1>Horarios</h1>
-
-
+<!--informacion-->
   </div><hr> 
   <table style="margin: 0px auto;" class="styled-table">
     <thead>
@@ -115,6 +116,7 @@ Presiona para descargar el PDF</a>
         </tr>
     </tbody>
 </table>
+<!--enlace de descarga para el pdf con los horarios -->
 <a href="https://drive.google.com/u/3/uc?id=1ZSEcPBj9GBqNldZAghG-2U-LmMcXQlJm&export=download">
 Presiona para descargar el PDF</a>
   
@@ -130,6 +132,7 @@ $(function(){
 });
 </script>
 <!--end of Footer-->
+<!--carga de scripts-->
 <script src="../scripts/verificarSesion.js"></script>
 
 
