--- a/public/prueba.html
+++ b/public/prueba.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+<!--espacio para la carga de datos js de prueba-->
 <div id="res">
 
-
-
 </div>
-
+<!--carga de datos del archivo js-->
 <script src="../scripts/obtenerDatosJSON.js"></script>
-
-
 
 </body>
 </html>
