--- a/public/tareas.html
+++ b/public/tareas.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Estilos de la pagina-->
     <link rel="stylesheet" href="../styles/style-navbar.css">
     <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <link rel="stylesheet" href="../styles/style-lista-tareas.css">
-    <!-- Google fonts -->
+    <!-- Script para la carga del navbar, sidebar, footer-->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -20,13 +22,7 @@
 </head>
 <body>  
     <header>
-        <!--<nav class="navBar">
-          <h1>MasterTis</h1>
-             <ul>
-              <a class="itemNav" href="../index.html">Pagina principal</a>
-              <a class="itemNav" href="cerrarSesion.html">Cerrar sesion</a>
-             </ul>
-        </nav>-->
+        
 
 <!--Navigation bar-->
 <div id="nav-placeholder">
@@ -42,8 +38,8 @@ $(function(){
     </header>
 
     <main class="flex-body">
-      <div class="sidebar">
-        <!-- <h2 class="sidebar-title">Navegación</h2> -->
+      <!--sidebar alumno-->
+      <div class="sidebar"> 
         <ul class="sidebar-list">
           <li>
             <a href="./perfil.html" class="sidebar-item">
@@ -73,16 +69,17 @@ $(function(){
        </li>
         </ul>
       </div>
-
+<!--fin sidebar alumno-->
+      <!--seccion con estilos de la pagina-->
       <section class="main-section">
-
+      <!--espacio para la carga de las tareas-->
        <div id="cards-container">
 
        </div>
 
       </section>
     </main>
-
+<!--carga de scripts-->
     <script src="../scripts/recuperarTareas.js"></script>
     <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
