--- a/public/unirseEmpresa.html
+++ b/public/unirseEmpresa.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--meta para que la pagina sea compatible en todos los dispositivos-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Estilos de la pagina-->
   <link rel="stylesheet" href="../styles/style-navbar.css">
   <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
   <link rel="stylesheet" href="../styles/style-lista-tareas.css">
   <link rel="stylesheet" href="../styles/style-join-group.css">
-  <!-- Google fonts -->
+      <!-- Script para la carga del navbar, sidebar, footer-->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    
+  <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -34,7 +36,7 @@ $("#nav-placeholder").load("navbar.html");
 </script>
 <!--end of Navigation bar-->
     </header>
-
+      <!--sidebar alumno-->
     <main class="flex-body">
       <div class="sidebar">
         <ul class="sidebar-list">
@@ -61,8 +63,13 @@ $("#nav-placeholder").load("navbar.html");
        </li>
         </ul>
       </div>
+<!--fin sidebar alumno-->
 
-      <form id="formularioUnionEmpresa" class="formulario">
+<!--inicio del formulario para que un estudiante se una a una empresa-->
+<!--el alumno debe ingresar un codigo unico para cada empresa para poder unirse a cualquier empresa-->
+<!--el codigo aparecera al momento que el alumno cree una empresa, o el la pesta;a
+ver grupo empresas del docente-->      
+<form id="formularioUnionEmpresa" class="formulario">
         <h2>Introduzca el codigo del grupo-empresa al que desea unirse</h2>
         <input class="input-titulo" name="codigo" type="text" placeholder="Intoduzca el codigo">
         <div id="mensaje-union-grupo"></div>
@@ -70,6 +77,7 @@ $("#nav-placeholder").load("navbar.html");
       </form>
 
     </main>
+    <!--Carga de scripts-->
 <script src="../scripts/unirseEmpresaCodigo.js"></script>
 <script src="../scripts/verificarSesionEstudiante.js"></script>
 
